[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/coin_anim5.png" type="Texture" id=1]
[ext_resource path="res://sprites/coin_anim2.png" type="Texture" id=2]
[ext_resource path="res://sprites/coin_anim4.png" type="Texture" id=3]
[ext_resource path="res://sprites/coin_anim3.png" type="Texture" id=4]
[ext_resource path="res://sprites/coin_anim1.png" type="Texture" id=5]
[ext_resource path="res://sprites/coin_anim6.png" type="Texture" id=6]
[ext_resource path="res://sprites/coin_anim7.png" type="Texture" id=7]
[ext_resource path="res://scripts/Collect.gd" type="Script" id=8]
[ext_resource path="res://sounds/coin_drop.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 8.2854

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Coin" type="Node2D"]
script = ExtResource( 8 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="HitBox"]
position = Vector2( 0.557442, 0 )
frames = SubResource( 2 )
frame = 4
speed_scale = 1.5
playing = true

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
